# x2gif

./: .gitignore  README.md  pyproject.toml
x2gif/: cli.py
